-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 17, 18
-
Component/s: hotspot
-
b11
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8296863 | 17.0.7-oracle | Tobias Hartmann | P4 | Resolved | Fixed | b01 |
| JDK-8299356 | 17.0.7 | Goetz Lindenmaier | P4 | Resolved | Fixed | b01 |
This is rare but was already observed twice so far. Once in the converted Valhalla tests and once while running the framework internal TestIRMatching.java test.
- backported by
-
JDK-8296863 [IR Framework] Rare occurrence of "<!-- safepoint while printing -->" in PrintIdeal/PrintOptoAssembly can let tests fail
-
- Resolved
-
-
JDK-8299356 [IR Framework] Rare occurrence of "<!-- safepoint while printing -->" in PrintIdeal/PrintOptoAssembly can let tests fail
-
- Resolved
-
- duplicates
-
JDK-8296852 compiler/c2/irTests/stringopts/TestNegativeArraySize.java failed with "IRViolationException: There were one or multiple IR rule failures."
-
- Closed
-
- relates to
-
JDK-8274911 testlibrary_tests/ir_framework/tests/TestIRMatching.java fails with "java.lang.RuntimeException: Should have thrown exception"
-
- Resolved
-
-
JDK-8284115 [IR Framework] Compilation is not found due to rare safepoint while dumping PrintIdeal/PrintOptoAssembly
-
- Resolved
-
-
JDK-8254129 IR Test Framework to support regex-based matching on the IR in JTreg compiler tests
-
- Resolved
-
- links to
-
Commit
openjdk/jdk17u-dev/e6d369c6
-
Commit
openjdk/jdk/36777345
-
Review
openjdk/jdk17u-dev/969
-
Review
openjdk/jdk/4932